Email service updates